--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -23,3 +23,10 @@
   </ul>
   {% endif %}
 </div>
+<script type="text/javascript">
+  function getData() {
+    return {
+      data : {"hello": "world"}
+    }
+  }
+</script>
