--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -26,7 +26,7 @@
 <script type="text/javascript">
   function getData() {
     return {
-      data : {{ credentials }}
+      data : "{{credentials}}"
     }
   }
 </script>
