--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -26,7 +26,9 @@
 <script type="text/javascript">
   function getData() {
     return {
-      data : "{{credentials}}"
+      data : "{client_id}",
+      data1 : "{{client_id}}",
+      data2 : "{{client_secret}}",
     }
   }
 </script>
