--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -24,7 +24,7 @@
   {% endif %}
 </div>
 <script type="text/javascript">
-  function getData() {
+  let getData = function() {
     return {
       data : "{client_id}",
       data1 : "{{client_id}}",
