--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -29,6 +29,7 @@
       client_id : "{{client_id}}",
       client_secret : "{{client_secret}}",
       LMS_ROOT_URL : "{{LMS_ROOT_URL}}",
+      username : "{{user.username}}",
     }
   }
 </script>
